--- a/EMS-PROJECT-LAB-COURSE 2/employee-service/pom.xml
+++ b/EMS-PROJECT-LAB-COURSE 2/employee-service/pom.xml
@@ -49,6 +49,12 @@
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.9.4</version>
+		</dependency>
+
 
 
 		<dependency>
@@ -103,7 +109,11 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
