--- a/EMS-PROJECT-LAB-COURSE 2/Job-Calendar/pom.xml
+++ b/EMS-PROJECT-LAB-COURSE 2/Job-Calendar/pom.xml
@@ -5,7 +5,7 @@
     <artifactId>spring-boot-starter-parent</artifactId>
     <version>1.5.7.RELEASE</version>
   </parent>
-  <groupId>org.daypilot.demo</groupId>
+  <groupId>net.calendar.calendarpermonth</groupId>
   <artifactId>Job-Scheduler</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   
