--- a/EMS-PROJECT-LAB-COURSE 2/AdminForm/pom.xml
+++ b/EMS-PROJECT-LAB-COURSE 2/AdminForm/pom.xml
@@ -46,6 +46,12 @@
 			<artifactId>h2</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>
+
+		</dependency>
+
 
 		<dependency>
 			<groupId>org.thymeleaf</groupId>
