--- a/EMS-PROJECT-LAB-COURSE 2/employee-service/pom.xml
+++ b/EMS-PROJECT-LAB-COURSE 2/employee-service/pom.xml
@@ -69,6 +69,11 @@
 			<artifactId>h2</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>
+
+		</dependency>
 
 		<dependency>
 			<groupId>org.thymeleaf</groupId>
