--- a/EMS-PROJECT-LAB-COURSE 2/employee-service/pom.xml
+++ b/EMS-PROJECT-LAB-COURSE 2/employee-service/pom.xml
@@ -49,11 +49,11 @@
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 		</dependency>
 
-		<dependency>
+<!-- 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
 			<version>2.9.4</version>
-		</dependency>
+		</dependency> -->
 
 
 
